--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
     overflow-x: hidden;
 }
 
-/* 状态栏样式 */
+/* 状态栏样式 
 .status-bar {
     display: flex;
     justify-content: space-between;
@@ -55,7 +55,7 @@ body {
     height: 24px;
     background-color: #000;
     border-radius: 0 0 12px 12px;
-}
+}*/
 
 /* 应用头部样式 */
 .app-header {
@@ -63,7 +63,7 @@ body {
     padding: 15px 0;
     box-shadow: var(--box-shadow);
     position: sticky;
-    top: 24px;
+    /*top: 24px;*/
     z-index: 100;
 }
 
@@ -130,7 +130,7 @@ body {
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     padding: 20px;
-    height: calc(100vh - 180px);
+    height: calc(100vh - 100px);
     overflow: hidden;
 }
 
@@ -138,6 +138,11 @@ body {
     width: 100%;
     height: 100%;
     border: none;
+    border-radius: var(--border-radius);
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 12px;
 }
 
 /* 底部导航栏样式 */
